[package]
name = "https-redirect"
version = "0.1.0"
authors = ["Matthew Hartstonge <matt@mykro.co.nz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
url = "1.7.2"
